cluster-home/tenants/buildbarn/worker-starterkit-ash-x86_64-cc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-starterkit-ash-x86_64-cc
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: starterkit-ash-x86_64-cc
  template:
    metadata:
      labels:
        app: worker
        instance: starterkit-ash-x86_64-cc
    spec:
      containers:
      - args:
        - /config/worker-starterkit-ash-x86_64-cc.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20240716T044555Z-9850e82
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/tini, -v, --, /bb/bb_runner, /config/runner-starterkit-ash-x86_64-cc.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:5f9c35c25db1d51a8ddaae5c0ba8d3c163c5e9a4a6cc97acd409ac7eae239448
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-starterkit-ash-x86_64-cc.jsonnet
            path: runner-starterkit-ash-x86_64-cc.jsonnet
          - key: worker-starterkit-ash-x86_64-cc.jsonnet
            path: worker-starterkit-ash-x86_64-cc.jsonnet
      - emptyDir: {}
        name: worker
