cluster-home/tenants/buildbarn/worker-ubuntu22-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu22-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu22-04
    spec:
      containers:
      - args:
        - /config/worker-ubuntu22-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20240716T044555Z-9850e82
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/tini, -v, --, /bb/bb_runner, /config/runner-ubuntu22-04.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:ea9611ae0147b6b8bcac3b3ffc3a556fb885a7e52689f67e741c3cb8a95f511c
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-ubuntu22-04.jsonnet
            path: runner-ubuntu22-04.jsonnet
          - key: worker-ubuntu22-04.jsonnet
            path: worker-ubuntu22-04.jsonnet
      - emptyDir: {}
        name: worker
