cluster-home/tenants/buildbarn/browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser
  namespace: buildbarn
spec:
  replicas: 3
  selector:
    matchLabels:
      app: browser
  template:
    metadata:
      labels:
        app: browser
    spec:
      containers:
      - image: ghcr.io/buildbarn/bb-browser:20240613T055327Z-f0fbe96
        args:
        - /config/browser.jsonnet
        name: browser
        ports:
        - containerPort: 7984
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
            - key: common.libsonnet
              path: common.libsonnet
            - key: browser.jsonnet
              path: browser.jsonnet
---
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 7984
    protocol: TCP
    name: http
  selector:
    app: browser
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: buildbarn.szamszur.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: browser
            port:
              name: http
  tls:
  - hosts:
    - buildbarn.szamszur.cloud
    secretName: buildbarn-szamszur-cloud-tls
